Bug 77874 - [None] as only possible choice in lists
Summary: [None] as only possible choice in lists
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: medium blocker
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-04-24 07:22 UTC by Florian Reisinger
Modified: 2014-04-28 12:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
JPG comparing 4.3 alpha 1 and 4.2.1.1 (45.58 KB, image/jpeg)
2014-04-24 07:22 UTC, Florian Reisinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Reisinger 2014-04-24 07:22:22 UTC
Created attachment 97877 [details]
JPG comparing 4.3 alpha 1 and 4.2.1.1

Hi,
Tested only on Windows
Older version I could reproduce this issue with is:
4.2.0.0.alpha0+
Build ID: 3d65dfa3c98e0f79c579cfac23d55092f7554244
TinderBox: Win-x86@47-TDF, Branch:master, Time: 2013-11-05_11:23:58

How to reproduce:
I will show you 2 places:
1)
-Open Writer
-Insert -> Manual break 
There you are ;) [this is the situation on the pic ;) )
2)
-Open Calc
- Right click on a cell
-- Format cell
-Borders
There you are again.

IS: Only [NONE] in the list
EXPECTED: (Speaking of manual breaks): Landscape, First page, Endnote, etc...
According to the bug prio flowchart (https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg) it is a BLOCKER HIGHEST [Core function, every time)
Comment 1 Niklas Johansson 2014-04-24 08:57:11 UTC
Confirmed on Mac OS X 10.9.2 as well.

I'm bisecting this issue at the moment. At the moment I concentrate on the Insert -> Manual break. I found a working master version from 2014-03-28 and a broken version from 2014-03-31. So I'm slowly getting closer to a bad commit.

I'll report back when I'm done.
Comment 2 Niklas Johansson 2014-04-24 18:29:21 UTC
The computer I used for bisecting this issue gave up on me earlier and won't even start at the moment. Sorry to say that I do not really know when I'll be able to pick this up again so if someone wants to pick this up, feel free to do so. 

To bad I didn't type down the commit range in my last post. But I can pretty confidently say that the issue is present in the last commit from 2014-03-31: 2aaf9a5c9a06b770598c84b427c5099bf127d856

but not in the first commit from 2014-03-28: 5e7aad393c0c3fab20c8298697ca96563caa7afe
Comment 3 Niklas Johansson 2014-04-25 07:03:23 UTC
The following commit does not contain the bug:
commit 9361d5a2dd9615e053b308e358afb8b36b843e71
Date:   Sat Mar 29 20:56:15 2014 +0100
Comment 4 Commit Notification 2014-04-25 07:16:11 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1900ac0b853eb3ae55c495da078410709004f433

Related fdo#77874: [None] as only possible choice in lists



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2014-04-25 09:07:52 UTC
For Excel part, I noticed that entries were indeed present but made not visible (color problem or something).
I'm trying to investigate from SvxBorderTabPage::FillLineListBox_Impl (cui/source/tabpages/border.cxx)
Comment 6 Julien Nabet 2014-04-28 10:39:50 UTC
With master sources git updated today (dea3ab9db68502b4f8306eb79c944ab87660888e), I don't reproduce the problem of missing line styles in Calc

Thomas: I'm pretty sure it works now thanks to your patch http://cgit.freedesktop.org/libreoffice/core/commit/?id=789d3b363f9a0619d14b37a74f37809d05230594, great job!!

Florian: I put it as FIXED. Don't hesitate to reopen this tracker if you can reproduce it with a build containing the quoted patch.