Related fdo#77874: [None] as only possible choice in lists

There was a slight error in commit 3a2a68a90f96d844c2e2636ecf3236c6f365520a
Indeed rToFill.InsertEntry was never called

Change-Id: I8189d478feecb9442036d13b68685db38e392ec2